--- a/src/style/index.css
+++ b/src/style/index.css
@@ -24,11 +24,11 @@ h1 {
   border-radius: 50%;
   background: #fff;
   display: flex;
-  justify-content: center;
   align-items: center;
-  max-height: 130px;
-  min-height: 130px;
-  min-width: 130px;
+  width: 130px;
+  height: 130px;
+  justify-content: center;
+
   img {
     height: auto;
     object-fit: contain;
