--- a/src/style/index.css
+++ b/src/style/index.css
@@ -15,7 +15,7 @@
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 1.2em;
   line-height: 1.1;
 }
 
@@ -31,10 +31,27 @@ h1 {
 
   img {
     height: auto;
-    object-fit: contain;
+    object-fit: cover;
     border-radius: 50%;
     max-height: 130px;
     max-width: 130px;
+    width: 100%;
+  }
+}
+
+.passenger-img-profile {
+  border: 2px solid #fff;
+  border-radius: 50%;
+  background: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  img {
+    height: auto;
+    object-fit: cover;
+    border-radius: 50%;
+    width: 100%;
   }
 }
 
