--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -15,12 +16,17 @@
 }
 
 h1 {
-  font-size: 1.2em;
+  font-size: 2.5em;
   line-height: 1.1;
+  font-family: "Bebas Neue";
 }
 
+.times {
+  font-family: "Times New Roman";
+  font-size: 1.2em;
+}
 .passenger-img {
-  border: 2px solid #fff;
+  box-shadow: 0px 0px 21px 0px #3b424d;
   border-radius: 50%;
   background: #fff;
   display: flex;
@@ -83,15 +89,11 @@ h1 {
 }
 
 .ripple {
-  background-position: center;
-  transition: background 0.8s;
+  transition: transform 0.3s ease;
 }
 .ripple:hover {
-  background: #bdc3c9 radial-gradient(circle, transparent 1%, #2a557c 1%)
-    center/15000%;
+  transform: scale(1.2);
 }
 .ripple:active {
-  background-color: #ffffff;
-  background-size: 100%;
-  transition: background 0s;
+  transform: scale(0.8);
 }
