--- a/src/style/index.css
+++ b/src/style/index.css
@@ -46,7 +46,7 @@ h1 {
 }
 
 .passenger-img-profile {
-  border: 2px solid #fff;
+  box-shadow: 0px 0px 21px 0px #3b424d;
   border-radius: 50%;
   background: #fff;
   display: flex;
