chore: Update OrnementLeft and OrnementRight component opacity on scroll

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -19,6 +19,14 @@
 main {
   margin-bottom: 200px;
 }
+
+header {
+  margin-top: 20px;
+  width: 60%;
+  display: flex;
+  flex-wrap: wrap;
+}
+
 h1 {
   font-size: 2.5em;
   line-height: 1.1;
