--- a/src/style/index.css
+++ b/src/style/index.css
@@ -121,3 +121,11 @@ footer {
   /* background: #0d1625; */
   width: 100%;
 }
+
+header.flex.sm\:flex-row.justify-center.items-center.gap-4.w-\[65\%\] {
+  position: fixed;
+  bottom: 10%;
+  background: #0d1625e8;
+  border-radius: 30px;
+  z-index: 9;
+}
